--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 iOpenStreetMap is an HTML/Javascript iPad Webapp for OpenStreetMap.
 
-It uses KHTML (http://www.khtml.org/), iWebKit (http://iwebkit.net/) and iBox(http://www.enthropia.com/labs/ibox/).
+It uses KHTML (http://www.khtml.org/) and iWebKit (http://iwebkit.net/).
